%% DGM-ERD-010 — Shortage / Resilience-related implemented representation
erDiagram
  MEDICINE_SHORTAGE_SITUATION {
    BIGSERIAL shortage_id PK
    TEXT public_id UK
    BIGINT medicinal_product_id FK
    BIGINT product_presentation_id FK
    BIGINT regulatory_jurisdiction_id FK
    BIGINT source_record_id FK
    TEXT ontology_iri
    DATE starts_on
  }
  MEDICINAL_PRODUCT {
    BIGSERIAL medicinal_product_id PK
    TEXT public_id UK
    TEXT preferred_name
    BIGINT primary_substance_id FK
    TEXT ontology_iri
  }
  PRODUCT_PRESENTATION {
    BIGSERIAL product_presentation_id PK
    TEXT public_id UK
    BIGINT medicinal_product_id FK
    TEXT ontology_iri
    TEXT packaging
    TEXT concentration
    NUMERIC num_in_pack
  }
  REGULATORY_JURISDICTION {
    BIGSERIAL regulatory_jurisdiction_id PK
    TEXT public_id UK
    BIGINT geography_id FK
    TEXT ontology_iri
    TEXT name
  }
  SOURCE_RECORD {
    BIGSERIAL source_record_id PK
    BIGINT dataset_release_id FK
    BIGINT transformation_run_id FK
    CHAR_64_ source_hash
    TEXT ontology_iri
    BIGINT row_number
    JSONB raw_key
  }
  OBSERVATION_RESULT {
    BIGSERIAL observation_result_id PK
    TEXT public_id UK
    TEXT observation_kind
    BIGINT product_presentation_id FK
    BIGINT facility_id FK
    BIGINT geography_id FK
    BIGINT diagnosis_reference_id FK
    DATE reporting_period
  }
  MEDICINAL_PRODUCT ||--o{ PRODUCT_PRESENTATION : "medicinal_product_id"
  PRODUCT_PRESENTATION o|--o{ OBSERVATION_RESULT : "product_presentation_id"
  SOURCE_RECORD ||--o{ OBSERVATION_RESULT : "source_record_id"
  MEDICINAL_PRODUCT o|--o{ MEDICINE_SHORTAGE_SITUATION : "medicinal_product_id"
  PRODUCT_PRESENTATION o|--o{ MEDICINE_SHORTAGE_SITUATION : "product_presentation_id"
  REGULATORY_JURISDICTION o|--o{ MEDICINE_SHORTAGE_SITUATION : "regulatory_jurisdiction_id"
  SOURCE_RECORD o|--o{ MEDICINE_SHORTAGE_SITUATION : "source_record_id"
